kompose-without-kong/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f .\docker-compose-resolved-wokong.yml convert -o .\kompose-without-kong\
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: customer
  name: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: customer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f .\docker-compose-resolved-wokong.yml convert -o .\kompose-without-kong\
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/greentable-default: "true"
        io.kompose.service: customer
    spec:
      containers:
        - env:
            - name: CUSTOMER_DB_URL
              value: mongodb+srv://Customer:customer@cluster0.cljlebi.mongodb.net/?retryWrites=true&w=majority
            - name: PYTHONUNBUFFERED
              value: "1"
          image: nickyex2/customer:latest
          name: customer
          ports:
            - containerPort: 5001
          resources: {}
      restartPolicy: Always
status: {}
