kompose-without-kong/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f .\docker-compose-resolved-wokong.yml convert -o .\kompose-without-kong\
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: notification
  name: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notification
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f .\docker-compose-resolved-wokong.yml convert -o .\kompose-without-kong\
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/greentable-default: "true"
        io.kompose.service: notification
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: rabbit_host
              value: rabbitmq
            - name: rabbit_port
              value: "5672"
            - name: telegram_url
              value: http://10.8.15.138:5015
            - name: twilio_url
              value: http://10.8.9.220:5014
          image: nickyex2/notification:latest
          name: notification
          resources: {}
      restartPolicy: Always
status: {}
