kompose-without-kong/notify-customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f .\docker-compose-resolved-wokong.yml convert -o .\kompose-without-kong\
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: notify-customer
  name: notify-customer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notify-customer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f .\docker-compose-resolved-wokong.yml convert -o .\kompose-without-kong\
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/greentable-default: "true"
        io.kompose.service: notify-customer
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: rabbit_host
              value: rabbitmq
            - name: rabbit_port
              value: "5672"
            - name: waitlist_url
              value: http://10.8.12.188:5010/waitlist
          image: nickyex2/notify-customer:latest
          name: notify-customer
          resources: {}
      restartPolicy: Always
status: {}
