kompose-without-kong/place-booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f .\docker-compose-resolved-wokong.yml convert -o .\kompose-without-kong\
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: place-booking
  name: place-booking
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: place-booking
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f .\docker-compose-resolved-wokong.yml convert -o .\kompose-without-kong\
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/greentable-default: "true"
        io.kompose.service: place-booking
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: booking_url
              value: http://10.8.3.248:5003/booking
            - name: catalog_url
              value: http://10.8.10.58:5002/catalog
            - name: customer_url
              value: http://10.8.13.215:5001/customer
            - name: rabbit_host
              value: rabbitmq
            - name: rabbit_port
              value: "5672"
            - name: waitlist_url
              value: http://10.8.12.188:5010/waitlist
          image: nickyex2/place-booking:latest
          name: place-booking
          ports:
            - containerPort: 5006
          resources: {}
      restartPolicy: Always
status: {}
