kompose-without-kong/make-payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f .\docker-compose-resolved-wokong.yml convert -o .\kompose-without-kong\
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: make-payment
  name: make-payment
spec:
  ports:
    - name: "5007"
      port: 5007
      targetPort: 5007
  selector:
    io.kompose.service: make-payment
status:
  loadBalancer: {}
