kompose-without-kong/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f .\docker-compose-resolved-wokong.yml convert -o .\kompose-without-kong\
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: payment
  name: payment
spec:
  ports:
    - name: "5004"
      port: 5004
      targetPort: 5004
  selector:
    io.kompose.service: payment
status:
  loadBalancer: {}
