kompose-without-kong/telegram-send-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f .\docker-compose-resolved-wokong.yml convert -o .\kompose-without-kong\
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: telegram-send-api
  name: telegram-send-api
spec:
  ports:
    - name: "5015"
      port: 5015
      targetPort: 5015
  selector:
    io.kompose.service: telegram-send-api
status:
  loadBalancer: {}
